[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/MainUI/LightTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Textures/bedroom3_1bit.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GameUI/EventUI/FirstWakingUpEvent/FirstWakingUpEventUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GameUI/GameUIv2.gd" type="Script" id=4]
[ext_resource path="res://Scenes/GameUI/TextInteractionUI/TextInteractionPanel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/GameUI/InteractableUI/InteractionsDarkPanel/InteractionsPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/GameUI/InteractableUI/InteractionsPanel/InteractionsPanel.tscn" type="PackedScene" id=42]
[ext_resource path="res://Scenes/GameUI/SelfAwarenessUI/SelfAwarenessPanel.tscn" type="PackedScene" id=45]
[ext_resource path="res://Scenes/GameUI/InteractableUI/InteractablesPanel.tscn" type="PackedScene" id=46]
[ext_resource path="res://Scenes/GameUI/WorldController/WorldController.tscn" type="PackedScene" id=47]
[ext_resource path="res://Scenes/Data/Locations/HomeYourBedroom.tres" type="Resource" id=48]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.137255, 0.137255, 1 )

[node name="GameUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 160 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BottomFilmBar" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextInteractionPanel" parent="BottomFilmBar" instance=ExtResource( 5 )]

[node name="TopFilmBar" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HeaderUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -616.0
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HeaderUI/VBoxContainer"]
margin_right = 24.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="EventContainer" type="Control" parent="HeaderUI/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 320 )
size_flags_horizontal = 3

[node name="FirstWakingUpEventUI" parent="HeaderUI/VBoxContainer/HBoxContainer2/EventContainer" instance=ExtResource( 3 )]
visible = false

[node name="InteractablesPanel" parent="HeaderUI/VBoxContainer/HBoxContainer2" instance=ExtResource( 46 )]
visible = false
anchor_left = 0.0
anchor_right = 0.0
margin_left = 466.0
margin_right = 616.0
margin_bottom = 320.0

[node name="HBoxContainer" type="HBoxContainer" parent="HeaderUI/VBoxContainer"]
visible = false
margin_top = 220.0
margin_right = 640.0
margin_bottom = 220.0
custom_constants/separation = 0

[node name="SelfAwarenessPanel" parent="HeaderUI/VBoxContainer/HBoxContainer" instance=ExtResource( 45 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 150.0
margin_bottom = 100.0

[node name="InteractionsPanel" parent="HeaderUI/VBoxContainer" instance=ExtResource( 6 )]
visible = false
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 345.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionsPanel" parent="MarginContainer" instance=ExtResource( 42 )]
margin_left = 0.0
margin_top = 50.0
margin_right = 24.0
margin_bottom = 244.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="WorldController" parent="." instance=ExtResource( 47 )]
current_location = ExtResource( 48 )

[connection signal="pressed_interactable" from="HeaderUI/VBoxContainer/HBoxContainer2/InteractablesPanel" to="." method="_on_InteractablesPanel_pressed_interactable"]
[connection signal="pressed_location" from="HeaderUI/VBoxContainer/HBoxContainer2/InteractablesPanel" to="." method="_on_InteractablesPanel_pressed_location"]
[connection signal="added_time" from="WorldController" to="." method="_on_WorldController_added_time"]
